--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,3 +105,13 @@ a {
     color-scheme: dark;
   }
 }
+
+ul {
+    display: flex;
+    justify-content: space-around;
+}
+
+ul li {
+    list-style: none;
+    gap: 20px;
+}
