--- a/src/componets/Feedback/styles.module.css
+++ b/src/componets/Feedback/styles.module.css
@@ -40,6 +40,12 @@
     margin-bottom: 1rem;
 }
 
+.signatureContainer {
+    border: solid 1px lightcoral;
+    max-width: 300px;
+    min-height: 150px;
+}
+
 #canvas {
     border: 2px solid #e0e0e0;
     border-radius: 8px;
